@@ -10,6 +10,8 @@ What's New in Python 3.3.0 Beta 1?
 Core and Builtins
 -----------------
 
+- Issue #15146: Add PyType_FromSpecWithBases. Patch by Robin Schreiber.
+
 - Issue #15142: Fix reference leak when deallocating instances of types
   created using PyType_FromSpec().
 
